--- a/pug/index.pug
+++ b/pug/index.pug
@@ -53,16 +53,16 @@ html(lang='en')
                             li
                                 a(href='about.html') ABOUT 
                             li#product-nav-swith
-                                a.position-r(href='javascript:;') PRODUCT
-                                ul#product-nav-snb.submenu
-                                    li
-                                        a(href='product-list-all.html') 全部產品
-                                    li
-                                        a(href='product-list-HOT.html') 熱門產品
-                                    li
-                                        a(href='product-list-new.html') 最新產品
-                                    li.rad
-                                        a(href='product-list-.html') 季節限定  
+                                a.position-r(href='product_list.html') PRODUCT
+                                //- ul#product-nav-snb.submenu
+                                //-     li
+                                //-         a(href='product_list.html#all') 全部產品
+                                //-     li
+                                //-         a(href='product_list.html#hot') 熱門產品
+                                //-     li
+                                //-         a(href='product_list.html#new') 最新產品
+                                //-     li
+                                //-         a(href='product_list.html#limited') 季節限定  
                             li 
                                 a(href='store.html') STORE 
                             li 
