--- a/pug/news.pug
+++ b/pug/news.pug
@@ -53,16 +53,16 @@ html(lang='en')
                             li
                                 a(href='about.html') ABOUT 
                             li#product-nav-swith
-                                a.position-r(href='javascript:;') PRODUCT
-                                ul#product-nav-snb.submenu
-                                    li
-                                        a(href='product-list-all.html') 全部產品
-                                    li
-                                        a(href='product-list-HOT.html') 熱門產品
-                                    li
-                                        a(href='product-list-new.html') 最新產品
-                                    li.rad
-                                        a(href='product-list-.html') 季節限定  
+                                a.position-r(href='product_list.html') PRODUCT
+                                //- ul#product-nav-snb.submenu
+                                //-     li
+                                //-         a(href='product-list-all.html') 全部產品
+                                //-     li
+                                //-         a(href='product-list-HOT.html') 熱門產品
+                                //-     li
+                                //-         a(href='product-list-new.html') 最新產品
+                                //-     li
+                                //-         a(href='product-list-.html') 季節限定  
                             li 
                                 a(href='store.html') STORE 
                             li 
@@ -96,8 +96,8 @@ html(lang='en')
                             li    
                                 a.icon_shoppingcar(href='#') 
                                     img(src='public/images/icon_shoppingcar.svg', alt='icon_shoppingcar')
-        .container.page-top-set
-            ul.breadcrumbs.header-space
+        .container
+            ul.breadcrumbs.header-space.page-top-set
                 li
                     a(href="index.html") 首頁
                 li &nbsp;&#10095;&nbsp;
