--- a/public/css/scss/stylelin.scss
+++ b/public/css/scss/stylelin.scss
@@ -1023,12 +1023,15 @@ h1 {
 
 // ----------------------------------------totop
 .page-top {
-    display: block;
+    display: none;
     position: fixed;
     bottom: 15px;
     right:15px;
     cursor: pointer;
     z-index: 900;
+}
+.page-top.active{
+    display:block;
 }
 
 // -----------------------------------------------------------------------------------
