--- a/public/css/stylelin.css
+++ b/public/css/stylelin.css
@@ -491,7 +491,7 @@ header > .container .icon-right > ul > li > a {
   animation-duration: 1.5s;
 }
 
-.container > div > .row div {
+.container > div > .flex-space-around div {
   margin-top: 100px;
   text-align: center;
   line-height: 45px;
@@ -516,7 +516,7 @@ header > .container .icon-right > ul > li > a {
   color: #993838;
 }
 
-.container > div > .row > img {
+.container > div > .flex-space-around > img {
   width: 20%;
   margin: 100px auto;
 }
@@ -809,10 +809,74 @@ h1 {
   top: 50px;
 }
 
+.about {
+  margin-top: -4px;
+  justify-content: space-around;
+}
+
+.about {
+  background-image: url(/public/images/about-text-bcakground.png);
+}
+
+.about > img {
+  width: 30%;
+  height: 30%;
+  margin: auto;
+  border-radius: 10px;
+}
+
+.about-text {
+  margin: auto;
+}
+
+.about-text > h4 {
+  margin-top: 20px;
+  letter-spacing: 0.2em;
+  font-size: 20px;
+  line-height: 45px;
+  margin-bottom: 10px;
+}
+
+.about-text > div {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 39px;
+}
+
+.text-mar-bottom {
+  margin-bottom: 25px;
+}
+
+.product-page-wrap > .row {
+  padding: 40px;
+}
+
+.product-page-wrap > .row > img {
+  width: 40%;
+  height: 40%;
+}
+
+.product-page-wrap > .row > div {
+  margin: auto 0;
+  padding-left: 30px;
+  font-size: 18px;
+  line-height: 40px;
+  letter-spacing: 0.4em;
+}
+
+iframe {
+  margin: 30px 5%;
+}
+
 @media (max-width: 1150px) {
   header > .container .logo > a > img {
     width: 150px;
     margin-top: 10px;
+  }
+
+  .product-page-wrap > .row > div {
+    font-size: 16px;
+    line-height: 30px;
   }
 }
 @media (max-width: 926px) {
@@ -986,6 +1050,35 @@ h1 {
   .new-page-wrap {
     padding: 35px 35px;
   }
+
+  .about-text > h4 {
+    letter-spacing: 0.2em;
+    font-size: 16px;
+    line-height: 20px;
+  }
+
+  .about-text > div {
+    font-size: 10px;
+    line-height: 33px;
+  }
+
+  .text-mar-bottom {
+    margin-bottom: 15px;
+  }
+
+  .product-page-wrap > .row > img {
+    width: 90%;
+  }
+
+  .product-page-wrap > .row {
+    display: block;
+    text-align: center;
+  }
+
+  .product-page-wrap > .row > div {
+    margin-top: 30px;
+    padding-left: 0;
+  }
 }
 @media (max-width: 768px) {
   .text-over-img {
@@ -1022,7 +1115,7 @@ h1 {
     margin: 0 7px;
   }
 
-  .container > div > .row div {
+  .container > div > .flex-space-around div {
     margin-top: 130px;
     line-height: 30px;
   }
@@ -1042,7 +1135,7 @@ h1 {
     font-weight: 500;
   }
 
-  .container > div > .row > img {
+  .container > div > .flex-space-around > img {
     width: 25%;
     margin: 25px auto 70px;
   }
@@ -1091,8 +1184,30 @@ h1 {
     height: 155px;
   }
 
+  .product-text > h4 {
+    font-size: 12px;
+    line-height: 35px;
+    font-weight: 600;
+  }
+
   .page-top > img {
     width: 70%;
+  }
+
+  .about > img {
+    display: none;
+  }
+
+  .product-page-wrap > .row > div {
+    font-size: 10px;
+    line-height: 30px;
+  }
+}
+@media (max-width: 412px) {
+  .product-page-wrap > .row > div {
+    font-size: 8px;
+    line-height: 30px;
+    letter-spacing: 0.09em;
   }
 }
 .page-top {
