--- a/pug/product.pug
+++ b/pug/product.pug
@@ -4,7 +4,7 @@ html(lang='en')
         meta(charset='UTF-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        title linpaisserie
+        title linpatisserie product
         link(rel='icon' href='public/images/favicon.ico' type='image/x-icon')
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css')
         link(rel="stylesheet", href="public/js/WOW-master/css/libs/animate.css")
@@ -32,11 +32,11 @@ html(lang='en')
                                     li
                                         a(href='login_register.html') 登入/註冊
                                     li
-                                        a(href='member.html') 會員中心
+                                        a(href='#') 會員中心
                                     li
-                                        a(href='order.html') 訂單查詢
+                                        a(href='#') 訂單查詢
                                     li
-                                        a(href='collect.html') 收藏清單 
+                                        a(href='#') 收藏清單 
                         li    
                             a.icon_shoppingcar(href='#') 
                                 img(src='public/images/icon_shoppingcar.svg', alt='icon_shoppingcar')
@@ -53,7 +53,7 @@ html(lang='en')
                             li
                                 a(href='about.html') ABOUT 
                             li#product-nav-swith
-                                a.position-r(href='product_list.html') PRODUCT
+                                a.position-r(href='product.html') PRODUCT
                                 //- ul#product-nav-snb.submenu
                                     //- li
                                     //-     a(href='product-list-all.html') 全部產品
@@ -88,11 +88,11 @@ html(lang='en')
                                     li
                                         a(href='login_register.html') 登入/註冊
                                     li
-                                        a(href='member.html') 會員中心
+                                        a(href='#') 會員中心
                                     li
-                                        a(href='order.html') 訂單查詢
+                                        a(href='#') 訂單查詢
                                     li
-                                        a(href='collect.html') 收藏清單 
+                                        a(href='#') 收藏清單 
                             li    
                                 a.icon_shoppingcar(href='#') 
                                     img(src='public/images/icon_shoppingcar.svg', alt='icon_shoppingcar')
@@ -391,11 +391,11 @@ html(lang='en')
                         dd
                             a(href='product.html') 全部產品
                         dd
-                            a(href='product-list-HOT.html') 熱門產品
+                            a(href='product.html') 熱門產品
                         dd
-                            a(href='product-list-new.html') 最新產品 
+                            a(href='product.html') 最新產品 
                         dd
-                            a(href='product-list-.html') 季節限定   
+                            a(href='product.html') 季節限定   
                     dl.col-12.col-md-3
                         dt 
                         dd
