--- a/public/css/scss/stylelin.scss
+++ b/public/css/scss/stylelin.scss
@@ -354,7 +354,7 @@ header>.container .icon-right>ul>li>a {
 // ---------------------------------------輪播 end
 
 // --------------------------------------------店家宣言
-.container>div>.row div {
+.container>div>.flex-space-around div {
     margin-top: 100px;
     text-align: center;
     line-height: 45px;
@@ -379,7 +379,7 @@ header>.container .icon-right>ul>li>a {
     color: $primaty-color-r2;
 }
 
-.container>div>.row>img {
+.container>div>.flex-space-around>img {
     width: 20%;
     margin: 100px auto;
 }
@@ -692,15 +692,75 @@ h1 {
     position: absolute;
     width: 100%;
     top: 50px;
-
 }
+
+// ===================================================
+// ----------------------------about.html
+// ===================================================
+
+.about{
+    margin-top: -4px;
+    justify-content: space-around;
+}
+.about{ 
+    background-image: url(/public/images/about-text-bcakground.png);
+}
+.about>img{
+    width: 30%;
+    height: 30%;
+    margin: auto;
+    border-radius:10px;
+}
+.about-text{ 
+    margin: auto;
+}
+.about-text>h4{
+    margin-top: 20px;
+    letter-spacing: 0.2em;
+    font-size: 20px;
+    line-height: 45px;
+    margin-bottom: 10px;    
+}
+.about-text>div{
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 39px;
+}
+.text-mar-bottom{
+    margin-bottom: 25px;
+}
+
+// ================================================
+// ------------------------------------store.html
+// ================================================
+.product-page-wrap>.row{
+    padding: 40px;
+}
+.product-page-wrap>.row>img{
+    width: 40%;
+    height: 40%;
+} 
+.product-page-wrap>.row>div{
+    margin: auto 0;
+    padding-left:30px ;
+    font-size: 18px;
+    line-height: 40px;
+    letter-spacing: 0.4em;
+}
+iframe{
+    margin: 30px 5%;
+}
+
 
 // ---------------------------------------中間過度版
 @media(max-width:1150px) {
     header>.container .logo>a>img {
         width: 150px;
         margin-top: 10px;
-
+    }
+    .product-page-wrap>.row>div{
+        font-size: 16px;
+        line-height: 30px;
     }
 }
 
@@ -886,6 +946,35 @@ h1 {
     .new-page-wrap {
         padding: 35px 35px;
     }
+
+    // -------------------------------------about.html
+
+    .about-text>h4{
+        letter-spacing: 0.2em;
+        font-size: 16px;
+        line-height: 20px;  
+    }
+    .about-text>div{
+        font-size: 10px;
+        line-height: 33px;
+    
+    }
+    .text-mar-bottom{
+        margin-bottom: 15px;
+    }
+
+    .product-page-wrap>.row>img{
+        width: 90%;
+    }
+    .product-page-wrap>.row{
+        display: block;
+        text-align: center;
+    } 
+    .product-page-wrap>.row>div{
+        margin-top: 30px;
+        padding-left: 0;
+    }
+
 }
 
 // --------------------------------------<768 phone
@@ -928,7 +1017,7 @@ h1 {
     }
 
     // --------------------------店家宣言
-    .container>div>.row div {
+    .container>div>.flex-space-around div {
         margin-top: 130px;
         line-height: 30px;
     }
@@ -948,7 +1037,7 @@ h1 {
         font-weight: 500;
     }
 
-    .container>div>.row>img {
+    .container>div>.flex-space-around>img {
         width: 25%;
         margin: 25px auto 70px;
     }
@@ -1013,13 +1102,35 @@ h1 {
     #all::before {
         height: 155px;
     }
-
+    .product-text>h4 {
+        font-size: 12px;
+        line-height: 35px;
+        font-weight: 600;
+    }
     .page-top>img {
       width: 70%; 
     }
+// ----------------------------------------about.html
+.about>img{
+    display: none;
+}
+// -----------------------------------------store.html
+
+.product-page-wrap>.row>div{
+    font-size: 10px;
+line-height: 30px;
 }
 
-//---------------------------------------<768 phone end
+
+}//---------------------------------------<768 phone end
+@media(max-width:412px){
+    .product-page-wrap>.row>div{
+        font-size: 8px;
+    line-height: 30px;
+        letter-spacing: 0.09em;
+}
+}
+
 
 // ----------------------------------------totop
 .page-top {
