--- a/pug/index.pug
+++ b/pug/index.pug
@@ -4,7 +4,7 @@ html(lang='en')
         meta(charset='UTF-8')
         meta(http-equiv='X-UA-Compatible', content='IE=edge')
         meta(name='viewport', content='width=device-width, initial-scale=1.0')
-        title linpaisserie
+        title linpatisserie
         link(rel='icon' href='public/images/favicon.ico' type='image/x-icon')
         link(rel='stylesheet', href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css')
         link(rel="stylesheet", href="public/js/WOW-master/css/libs/animate.css")
@@ -32,11 +32,11 @@ html(lang='en')
                                     li
                                         a(href='login_register.html') 登入/註冊
                                     li
-                                        a(href='member.html') 會員中心
+                                        a(href='#') 會員中心
                                     li
-                                        a(href='order.html') 訂單查詢
+                                        a(href='#') 訂單查詢
                                     li
-                                        a(href='collect.html') 收藏清單 
+                                        a(href='#') 收藏清單 
                         li    
                             a.icon_shoppingcar(href='#') 
                                 img(src='public/images/icon_shoppingcar.svg', alt='icon_shoppingcar')
@@ -53,7 +53,7 @@ html(lang='en')
                             li
                                 a(href='about.html') ABOUT 
                             li#product-nav-swith
-                                a.position-r(href='product_list.html') PRODUCT
+                                a.position-r(href='product.html') PRODUCT
                                 //- ul#product-nav-snb.submenu
                                 //-     li
                                 //-         a(href='product_list.html#all') 全部產品
@@ -88,11 +88,11 @@ html(lang='en')
                                     li
                                         a(href='login_register.html') 登入/註冊
                                     li
-                                        a(href='member.html') 會員中心
+                                        a(href='#') 會員中心
                                     li
-                                        a(href='order.html') 訂單查詢
+                                        a(href='#') 訂單查詢
                                     li
-                                        a(href='collect.html') 收藏清單 
+                                        a(href='#') 收藏清單 
                             li    
                                 a.icon_shoppingcar(href='#') 
                                     img(src='public/images/icon_shoppingcar.svg', alt='icon_shoppingcar')
@@ -153,7 +153,7 @@ html(lang='en')
                         p 即日起供應至7月底~
                         p 為了維持商品的品質，目前僅提供網路預訂到店面取貨，
                         p 尚未提供宅配還請見諒! 
-                a.bnt(href="product-list-all.html") 
+                a.bnt(href="news.html") 
                     p READ MORE &nbsp;&nbsp;&#10095;    
         //---productS-tab-----------------------start  
         .position-r 
@@ -215,7 +215,7 @@ html(lang='en')
                                     .product-text 
                                         h4 草莓鮮奶油蛋糕/6吋
                                         p $1000
-                    a.bnt(href="product-list-all.html") 
+                    a.bnt(href="product.html") 
                         p  VIWE ALL &nbsp;&nbsp;&#10095;                  
             #tab2.tab-content
                 .product.wrap-white
@@ -262,7 +262,7 @@ html(lang='en')
                                         h4 芒果磅蛋糕/條
                                         p $400
                                 
-                    a.bnt(href="product-list-all.html") 
+                    a.bnt(href="product.html") 
                         p  VIWE ALL &nbsp;&nbsp;&#10095;       
             #tab3.tab-content
                 .product.wrap-white
@@ -307,7 +307,7 @@ html(lang='en')
                                     .product-text 
                                         h4 芒果慕斯
                                         p $300
-                    a.bnt(href="product-list-all.html") 
+                    a.bnt(href="product.html") 
                         p  VIWE ALL &nbsp;&nbsp;&#10095;                             
         footer 
             .container
@@ -336,11 +336,11 @@ html(lang='en')
                         dd
                             a(href='product.html') 全部產品
                         dd
-                            a(href='product-list-HOT.html') 熱門產品
+                            a(href='product.html') 熱門產品
                         dd
-                            a(href='product-list-new.html') 最新產品 
+                            a(href='product.html') 最新產品 
                         dd
-                            a(href='product-list-.html') 季節限定   
+                            a(href='product.html') 季節限定   
                     dl.col-12.col-md-3
                         dt 
                         dd
