--- a/public/css/stylelin.css
+++ b/public/css/stylelin.css
@@ -524,7 +524,7 @@ header > .container .icon-right > ul > li > a {
 
 .text-wrap {
   text-align: center;
-  width: 200px;
+  width: 250px;
   margin: 10px auto 32px;
 }
 
@@ -805,7 +805,6 @@ h1 {
 
 .about {
   margin-top: -4px;
-  justify-content: space-around;
 }
 
 .about {
@@ -815,15 +814,18 @@ h1 {
 .about > img {
   width: 30%;
   height: 30%;
-  margin: auto;
+  margin: 3% 5%;
   border-radius: 10px;
 }
 
 .about-text {
-  margin: auto;
+  margin: auto 0px auto 0px;
 }
 
 .about-text > h4 {
+  border-bottom: 1px solid #e08967;
+  padding-bottom: 10px;
+  padding-left: 20px;
   margin-top: 20px;
   letter-spacing: 0.2em;
   font-size: 20px;
@@ -835,13 +837,14 @@ h1 {
   font-weight: 400;
   font-size: 16px;
   line-height: 39px;
+  padding-left: 20px;
 }
 
 .text-mar-bottom {
   margin-bottom: 25px;
 }
 
-.product-page-wrap > .row {
+.product-page-wrap > .padding {
   padding: 40px;
 }
 
@@ -850,7 +853,7 @@ h1 {
   height: 40%;
 }
 
-.product-page-wrap > .row > div {
+.product-page-wrap > .row > .store-text {
   margin: auto 0;
   padding-left: 30px;
   font-size: 18px;
@@ -858,7 +861,7 @@ h1 {
   letter-spacing: 0.4em;
 }
 
-.product-page-wrap > .row > div > h4 {
+.product-page-wrap > .row > .store-text > h4 {
   padding-bottom: 4px;
   border-bottom: 1px solid #e08967;
   padding-left: 15px;
@@ -876,7 +879,7 @@ iframe {
     margin-top: 10px;
   }
 
-  .product-page-wrap > .row > div {
+  .product-page-wrap > .row > .store-text {
     font-size: 16px;
     line-height: 30px;
   }
@@ -1053,6 +1056,10 @@ iframe {
     padding: 35px 35px;
   }
 
+  .about-text {
+    margin: auto;
+  }
+
   .about-text > h4 {
     letter-spacing: 0.2em;
     font-size: 16px;
@@ -1068,21 +1075,21 @@ iframe {
     margin-bottom: 15px;
   }
 
-  .product-page-wrap > .row > img {
+  .product-page-wrap > .padding > img {
     width: 90%;
   }
 
-  .product-page-wrap > .row {
+  .product-page-wrap > .padding {
     display: block;
     text-align: center;
   }
 
-  .product-page-wrap > .row > div {
+  .product-page-wrap > .row > .store-text {
     margin-top: 30px;
     padding-left: 0;
   }
 
-  .product-page-wrap > .row > div > h4 {
+  .product-page-wrap > .row > .store-text > h4 {
     font-size: 14px;
     margin: 50px auto;
     padding-left: 2px;
@@ -1206,17 +1213,17 @@ iframe {
     display: none;
   }
 
-  .product-page-wrap > .row > div {
+  .product-page-wrap > .row > .store-text {
     font-size: 10px;
     line-height: 30px;
   }
 
-  .product-page-wrap > .row > div > h4 {
+  .product-page-wrap > .row > .store-text > h4 {
     width: 180px;
   }
 }
 @media (max-width: 412px) {
-  .product-page-wrap > .row > div {
+  .product-page-wrap > .row > .store-text {
     font-size: 8px;
     line-height: 30px;
     letter-spacing: 0.09em;
