--- a/pug/about.pug
+++ b/pug/about.pug
@@ -114,7 +114,7 @@ html(lang='en')
                 //- img.img-fluid.bg-pic(src="public/images/about-text-bcakground.png", alt="粉色背景")
                 .about-text
                     h4 關於 LIN PATISSERIE
-                    div 小時候吃蛋糕時，感受到的幸福滋味，開啟了學習甜點的路程，
+                    div 甜點，總是能讓我感受到的幸福滋味，
                     .text-mar-bottom  抱著一份想分享幸福的心情，經營著 LIn Patisserie。
                     div 我們使用新鮮、優良的原料製作每一個產品，
                     div 採用更健康的減糖配方，讓甜點更加的符合現代人的飲食。
