--- a/pug/store.pug
+++ b/pug/store.pug
@@ -110,9 +110,9 @@ html(lang='en')
                 li 門市資訊
             .page-title-wrap 門市資訊
             .product-page-wrap   
-                .row 
+                .row.padding 
                     img(src="public/images/store-display.jpg", alt="門市甜點櫃")
-                    div 
+                    .store-text 
                         h4 LIN PATISSERIE
                         div 營業時段: 週一至週五 09:00-18:00         
                         div 連絡電話: 0800-888-888               
