--- a/pug/login_register.pug
+++ b/pug/login_register.pug
@@ -24,6 +24,7 @@ html(lang='en')
 
             
     body
+        #preloader
         header                               
             .container.position-r  
                 .logo
