--- a/public/css/scss/stylelin.scss
+++ b/public/css/scss/stylelin.scss
@@ -101,7 +101,14 @@ div {
     margin: auto;
     width: 80%;
 }
-
+// -------------------------------------preloader
+#preloader{
+    background: $primaty-color-r6 url(../images/loader.gif) no-repeat center ;
+    height: 100vh;
+    width: 100%;
+    position: fixed;
+    z-index: 100;
+}
 
 // ---------------------------------------------------------------
 // -----------------------------------------------------header
@@ -113,7 +120,7 @@ header {
     position: fixed;
     background: rgba(255, 255, 255, 0.9);
     filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.1));
-    z-index: 3000;
+    z-index: 99;
 }
 
 header>.container {
@@ -240,7 +247,7 @@ header>.container .icon-right>ul>li>a {
     bottom: 15px;
     right: 15px;
     cursor: pointer;
-    z-index: 900;
+    z-index: 98;
 }
 
 .page-top.active {
