--- a/public/css/stylelin.css
+++ b/public/css/stylelin.css
@@ -271,6 +271,14 @@ div {
   width: 80%;
 }
 
+#preloader {
+  background: #faedca url(../images/loader.gif) no-repeat center;
+  height: 100vh;
+  width: 100%;
+  position: fixed;
+  z-index: 100;
+}
+
 header {
   width: 100%;
   height: 85px;
@@ -278,7 +286,7 @@ header {
   position: fixed;
   background: rgba(255, 255, 255, 0.9);
   filter: drop-shadow(0px 5px 4px rgba(0, 0, 0, 0.1));
-  z-index: 3000;
+  z-index: 99;
 }
 
 header > .container {
@@ -395,7 +403,7 @@ header > .container .icon-right > ul > li > a {
   bottom: 15px;
   right: 15px;
   cursor: pointer;
-  z-index: 900;
+  z-index: 98;
 }
 
 .page-top.active {
