--- a/pug/store.pug
+++ b/pug/store.pug
@@ -16,6 +16,7 @@ html(lang='en')
             font-family: Arial, Helvetica, sans-serif;
             }
     body
+        #preloader
         header                               
             .container.position-r  
                 .logo
